target/generated-sources/antlr4/mysqlParser.java
// Generated from mysql.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mysqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__1=1, T__0=2, CREATE=3, SELECT=4, FROM=5, TABLE=6, INSERT=7, INTO=8, 
		VALUES=9, UPDATE=10, SET=11, WHERE=12, DELETE=13, PRIMARY_KEY=14, INDEX=15, 
		ON=16, INT_TYPE=17, FLOAT_TYPE=18, STRING_TYPE=19, DOUBLE_TYPE=20, VARCHAR_TYPE=21, 
		DECIMAL_TYPE=22, COMMA=23, ASTERISK=24, LEFT_PARENTHESIS=25, RIGHT_PARENTHESIS=26, 
		EQUALS=27, NOT=28, MINUS=29, PLUS=30, GT=31, GE=32, LT=33, LE=34, NE=35, 
		AND=36, OR=37, XOR=38, QUOTED_STRING=39, INTEGER_VALUE=40, DECIMAL_VALUE=41, 
		IDENTIFIER=42, WS=43;
	public static final String[] tokenNames = {
		"<INVALID>", "' '", "';'", "CREATE", "SELECT", "FROM", "TABLE", "INSERT", 
		"INTO", "VALUES", "UPDATE", "SET", "WHERE", "DELETE", "PRIMARY_KEY", "INDEX", 
		"ON", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", "DOUBLE_TYPE", "VARCHAR_TYPE", 
		"DECIMAL_TYPE", "','", "'*'", "'('", "')'", "'='", "'!'", "'-'", "'+'", 
		"'>'", "'>='", "'<'", "'<='", "'!='", "AND", "OR", "XOR", "QUOTED_STRING", 
		"INTEGER_VALUE", "DECIMAL_VALUE", "IDENTIFIER", "WS"
	};
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_create_table = 2, RULE_create_index = 3, 
		RULE_update = 4, RULE_insert = 5, RULE_delete = 6, RULE_select = 7, RULE_create_table_column = 8, 
		RULE_clustering_key = 9, RULE_clustering_key_value = 10, RULE_columnName = 11, 
		RULE_columnType = 12, RULE_type = 13, RULE_operation = 14, RULE_operator = 15, 
		RULE_table_name = 16, RULE_constant = 17;
	public static final String[] ruleNames = {
		"start", "statement", "create_table", "create_index", "update", "insert", 
		"delete", "select", "create_table_column", "clustering_key", "clustering_key_value", 
		"columnName", "columnType", "type", "operation", "operator", "table_name", 
		"constant"
	};

	@Override
	public String getGrammarFileName() { return "mysql.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mysqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(mysqlParser.EOF, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); statement();
			setState(38);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(37); match(T__0);
				}
			}

			setState(40); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Create_tableContext create_table() {
			return getRuleContext(Create_tableContext.class,0);
		}
		public InsertContext insert() {
			return getRuleContext(InsertContext.class,0);
		}
		public UpdateContext update() {
			return getRuleContext(UpdateContext.class,0);
		}
		public DeleteContext delete() {
			return getRuleContext(DeleteContext.class,0);
		}
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public Create_indexContext create_index() {
			return getRuleContext(Create_indexContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(48);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42); create_table();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43); create_index();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44); update();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(45); insert();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(46); delete();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(47); select();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_tableContext extends ParserRuleContext {
		public TerminalNode RIGHT_PARENTHESIS(int i) {
			return getToken(mysqlParser.RIGHT_PARENTHESIS, i);
		}
		public TerminalNode LEFT_PARENTHESIS(int i) {
			return getToken(mysqlParser.LEFT_PARENTHESIS, i);
		}
		public TerminalNode TABLE() { return getToken(mysqlParser.TABLE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(mysqlParser.COMMA, i);
		}
		public TerminalNode PRIMARY_KEY() { return getToken(mysqlParser.PRIMARY_KEY, 0); }
		public List<Create_table_columnContext> create_table_column() {
			return getRuleContexts(Create_table_columnContext.class);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(mysqlParser.COMMA); }
		public Clustering_keyContext clustering_key() {
			return getRuleContext(Clustering_keyContext.class,0);
		}
		public Create_table_columnContext create_table_column(int i) {
			return getRuleContext(Create_table_columnContext.class,i);
		}
		public TerminalNode CREATE() { return getToken(mysqlParser.CREATE, 0); }
		public List<TerminalNode> LEFT_PARENTHESIS() { return getTokens(mysqlParser.LEFT_PARENTHESIS); }
		public List<TerminalNode> RIGHT_PARENTHESIS() { return getTokens(mysqlParser.RIGHT_PARENTHESIS); }
		public Create_tableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).enterCreate_table(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).exitCreate_table(this);
		}
	}

	public final Create_tableContext create_table() throws RecognitionException {
		Create_tableContext _localctx = new Create_tableContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(CREATE);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(51); match(T__1);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57); match(TABLE);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(58); match(T__1);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64); table_name();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(65); match(T__1);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71); match(LEFT_PARENTHESIS);
			{
			setState(72); match(T__1);
			}
			setState(73); create_table_column();
			{
			setState(74); match(T__1);
			}
			{
			{
			setState(75); match(T__1);
			}
			setState(76); match(COMMA);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(77); match(T__1);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83); create_table_column();
			}
			{
			setState(85); match(T__1);
			}
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(86); match(T__1);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(92); match(COMMA);
				setState(93); match(PRIMARY_KEY);
				setState(94); match(LEFT_PARENTHESIS);
				setState(95); clustering_key();
				setState(96); match(RIGHT_PARENTHESIS);
				}
				break;
			}
			{
			setState(100); match(T__1);
			}
			setState(101); match(RIGHT_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_indexContext extends ParserRuleContext {
		public TerminalNode INDEX() { return getToken(mysqlParser.INDEX, 0); }
		public TerminalNode ON() { return getToken(mysqlParser.ON, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(mysqlParser.COMMA, 0); }
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public TerminalNode CREATE() { return getToken(mysqlParser.CREATE, 0); }
		public TerminalNode LEFT_PARENTHESIS() { return getToken(mysqlParser.LEFT_PARENTHESIS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(mysqlParser.IDENTIFIER, 0); }
		public TerminalNode RIGHT_PARENTHESIS() { return getToken(mysqlParser.RIGHT_PARENTHESIS, 0); }
		public Create_indexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).enterCreate_index(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).exitCreate_index(this);
		}
	}

	public final Create_indexContext create_index() throws RecognitionException {
		Create_indexContext _localctx = new Create_indexContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_create_index);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(103); match(T__1);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109); match(CREATE);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(110); match(T__1);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116); match(INDEX);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(117); match(T__1);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123); match(IDENTIFIER);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(124); match(T__1);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130); match(ON);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(131); match(T__1);
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137); table_name();
			{
			setState(138); match(T__1);
			}
			setState(139); match(LEFT_PARENTHESIS);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(140); match(T__1);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146); columnName();
			{
			setState(147); match(T__1);
			}
			{
			{
			setState(148); match(T__1);
			}
			setState(149); match(COMMA);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(150); match(T__1);
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156); columnName();
			}
			setState(158); match(RIGHT_PARENTHESIS);
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(159); match(T__1);
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateContext extends ParserRuleContext {
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public Clustering_key_valueContext clustering_key_value() {
			return getRuleContext(Clustering_key_valueContext.class,0);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(mysqlParser.EQUALS); }
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public TerminalNode UPDATE() { return getToken(mysqlParser.UPDATE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Clustering_keyContext clustering_key() {
			return getRuleContext(Clustering_keyContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(mysqlParser.COMMA, 0); }
		public TerminalNode EQUALS(int i) {
			return getToken(mysqlParser.EQUALS, i);
		}
		public TerminalNode WHERE() { return getToken(mysqlParser.WHERE, 0); }
		public TerminalNode SET() { return getToken(mysqlParser.SET, 0); }
		public UpdateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_update; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).enterUpdate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).exitUpdate(this);
		}
	}

	public final UpdateContext update() throws RecognitionException {
		UpdateContext _localctx = new UpdateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_update);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(165); match(T__1);
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171); match(UPDATE);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(172); match(T__1);
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178); table_name();
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(179); match(T__1);
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185); match(SET);
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(186); match(T__1);
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(192); columnName();
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(193); match(T__1);
				}
				}
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(199); match(EQUALS);
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(200); match(T__1);
				}
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(206); constant();
			setState(210);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(207); match(T__1);
					}
					} 
				}
				setState(212);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}
			{
			setState(216);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(213); match(T__1);
				}
				}
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(219); match(COMMA);
			{
			setState(220); match(T__1);
			}
			setState(221); columnName();
			{
			setState(222); match(T__1);
			}
			setState(223); match(EQUALS);
			{
			setState(224); match(T__1);
			}
			setState(225); constant();
			}
			setState(230);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(227); match(T__1);
				}
				}
				setState(232);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(233); match(WHERE);
			setState(237);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(234); match(T__1);
				}
				}
				setState(239);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(240); clustering_key();
			setState(244);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(241); match(T__1);
				}
				}
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(247); match(EQUALS);
			setState(251);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(248); match(T__1);
				}
				}
				setState(253);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(254); clustering_key_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertContext extends ParserRuleContext {
		public TerminalNode RIGHT_PARENTHESIS(int i) {
			return getToken(mysqlParser.RIGHT_PARENTHESIS, i);
		}
		public TerminalNode VALUES() { return getToken(mysqlParser.VALUES, 0); }
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public TerminalNode LEFT_PARENTHESIS(int i) {
			return getToken(mysqlParser.LEFT_PARENTHESIS, i);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(mysqlParser.COMMA, i);
		}
		public TerminalNode INTO() { return getToken(mysqlParser.INTO, 0); }
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(mysqlParser.COMMA); }
		public List<TerminalNode> LEFT_PARENTHESIS() { return getTokens(mysqlParser.LEFT_PARENTHESIS); }
		public TerminalNode INSERT() { return getToken(mysqlParser.INSERT, 0); }
		public List<TerminalNode> RIGHT_PARENTHESIS() { return getTokens(mysqlParser.RIGHT_PARENTHESIS); }
		public InsertContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).enterInsert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mysqlListener ) ((mysqlListener)listener).exitInsert(this);
		}
	}
